@@ -5,6 +5,11 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * cmake.pm: Add better cross-compile support for cmake.
     Heavily based on a patch from Helmut Grohne.
     (Closes: #794396)
+  * cmake.pm: Pass -DCMAKE_INSTALL_SYSCONFDIR=/etc and
+    -DCMAKE_INSTALL_LOCALSTATEDIR=/var to cmake.  Thanks to
+    Felix Geyer, Lisandro Damián Nicanor Pérez Meyer and
+    Michael Terry for the assistance plus suggestions.
+    (Closes: #719148)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 12 Aug 2015 10:46:59 +0200
 
